@@ -1,0 +1,7 @@
+{
+  "type": "overpowered:magic_infuser",
+  "input": {
+    "tag": "forge:gems/amethyst"
+  },
+  "enchantment": "minecraft:soul_speed"
+}
